# bookcard

./:  requirements-dev.txt   requirements.txt  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-docker-and-push.yaml  ci-backend.yaml  ci-frontend.yaml  dependabot-sync-generated-lockfiles.yaml  deploy-docs.yaml  lint-backend.yaml  lint-frontend.yaml  test-backend.yaml  test-frontend.yaml
0.1.0/: 404.html  index.html  openapi.json  sitemap.xml
0.1.0/auth/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  openapi.json  sitemap.xml
0.2.0/auth/: index.html
0.2.0/search/: search_index.json
bookcard/: __init__.py  config.py  constants.py  database.py
bookcard/api/: __init__.py  deps.py  exceptions.py  http_error_handler.py  lifespan.py  logging_config.py  main.py  middleware_config.py  routers.py
bookcard/common/: __init__.py  clock.py  filesystem.py
bookcard/db/: __init__.py
bookcard/metadata/: __init__.py  base.py  registry.py
bookcard/models/: __init__.py  auth.py  author_metadata.py  config.py  conversion.py  core.py  epub_fixer.py  ingest.py  kcc_config.py  kobo.py  magic_shelf_rules.py  media.py  metadata_enforcement.py  openlibrary.py  pvr.py  reading.py  shelves.py  system.py  tasks.py  user_library.py
bookcard/pvr/: __init__.py  base.py  error_handlers.py  exceptions.py  factory.py  models.py
bookcard/repositories/: __init__.py  admin_repositories.py  author_listing_components.py  author_repository.py  base.py  book_metadata_service.py  book_relationship_manager.py  book_search_service.py  calibre_book_repository.py  command_executor.py  config_repository.py  delete_commands.py  epub_fixer_repository.py  ereader_repository.py  file_manager.py  filters.py  ingest_repository.py  interfaces.py  kobo_repository.py  library_repository.py  library_statistics_service.py  metadata_enforcement_repository.py  models.py  reading_repository.py  role_repository.py  session_manager.py  shelf_repository.py  suggestions.py  user_library_repository.py  user_repository.py
bookcard/services/: __init__.py  auth_service.py  authentication_service.py  author_exception_mapper.py  author_merge_service.py  author_permission_helper.py  author_rematch_service.py  author_service.py  book_conversion_orchestration_service.py  book_cover_extractor.py  book_cover_service.py  book_dedrm_orchestration_service.py  book_file_service.py  book_merge_service.py  book_metadata_extractor.py  book_permission_helper.py  book_read_model_service.py  book_reading_summary_query_service.py  book_response_builder.py  book_service.py  calibre_db_initializer.py  config_service.py  conversion_utils.py  dedrm_service.py  download_client_service.py  download_monitor_service.py  download_service.py  email_config_service.py  email_config_strategies.py  email_config_update.py  email_service.py  epub_fixer_service.py  ereader_service.py  file_storage_service.py  format_metadata_service.py  indexer_service.py  kcc_profile_service.py  library_scanning_service.py  library_service.py  metadata_builder.py  (+28 more)
docs/: index.md  openapi.json
docs/api/: authentication.md  overview.md  reference.md
docs/auth/: README.md
docs/developers/: architecture.md  code-style.md  contributing.md  setup.md  workflow.md
docs/stylesheets/: extra.css
docs/user-guide/: book-card-interface.md  docker-installation.md  fetching-metadata.md  ingestion-configuration.md  installation.md  library-configuration.md  library-scanning.md  managing-devices.md  screenshots.md  uploading-books.md  usage.md  users-and-permissions.md
fundamental/: __init__.py  config.py  database.py
fundamental/api/: __init__.py  deps.py  exceptions.py  health.py  http_error_handler.py  lifespan.py  logging_config.py  main.py  middleware_config.py  routers.py  schemas.py
fundamental/db/: __init__.py
fundamental/metadata/: __init__.py  base.py  registry.py
fundamental/models/: __init__.py  auth.py  author_metadata.py  config.py  conversion.py  core.py  epub_fixer.py  ingest.py  kcc_config.py  kobo.py  library_scanning.py  media.py  metadata.py  metadata_enforcement.py  openlibrary.py  reading.py  shelves.py  system.py  tasks.py
fundamental/repositories/: __init__.py  admin_repositories.py  author_listing_components.py  author_repository.py  book_metadata_service.py  book_relationship_manager.py  book_search_service.py  calibre_book_repository.py  command_executor.py  config_repository.py  delete_commands.py  epub_fixer_repository.py  ereader_repository.py  file_manager.py  filename_utils.py  filters.py  ingest_repository.py  interfaces.py  kobo_repository.py  library_repository.py  library_statistics_service.py  metadata_enforcement_repository.py  models.py  reading_repository.py  role_repository.py  session_manager.py  shelf_repository.py  suggestions.py  user_repository.py
fundamental/services/: __init__.py  auth_service.py  author_exception_mapper.py  author_exceptions.py  author_merge_service.py  author_permission_helper.py  author_rematch_service.py  author_service.py  book_conversion_orchestration_service.py  book_cover_extractor.py  book_cover_service.py  book_dedrm_orchestration_service.py  book_exception_mapper.py  book_metadata.py  book_metadata_extractor.py  (+38 more)
infra/: .env.example  Dockerfile  Dockerfile.docs  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  nginx-docs.conf  start.sh
rainbow/: __init__.py  config.py  database.py
scripts/: __init__.py  build_docs.py  check_frontend_lockfile_intent.sh  generate_openapi.py  recover_admin.py  scripts.py
tests/: __init__.py  conftest.py  test_auth_middleware.py  test_auth_routes.py  test_config.py  test_constants.py  test_database.py  test_deps.py  test_main.py  test_schemas.py  test_security.py
web/: biome.json  next-env.d.ts  next.config.ts  package-lock.json  package.json  playright.config.ts  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.mts
(+2590 files in other folders)
