[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bookcard"
version = "0.2.0"
description = "Web app for browsing, reading, and downloading ebooks stored in a calibre database."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = [ "LICENSE" ]
dependencies = [
    "alembic>=1.17.1",
    "bcrypt==4.3.0",
    "beautifulsoup4>=4.12.2",
    "cryptography>=46.0.3",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.22",
    "pypdf>=6.6.2",
    "py-ezmail>=2.3.5",
    "pyyaml>=6.0.3",
    "defusedxml>=0.7.1",
    "dramatiq[redis,watch]>=2.0.0",
    "redis>=6.4.0",
    "watchfiles>=1.1.1",
    "py7zr>=1.0.0",
    "rarfile>=4.2",
    "apscheduler>=3.11.2",
    "urllib3>=2.6.3",
    "seleniumbase>=4.45.11",
    "emoji>=2.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bookcard"]

[project.scripts]
test-cov = "scripts.scripts:test_coverage"
test = "scripts.scripts:test"
lint = "scripts.scripts:lint"
lint-unsafe = "scripts.scripts:lint_unsafe"
format = "scripts.scripts:format_code"
type-check = "scripts.scripts:type_check"
serve = "scripts.scripts:serve"
migrate = "scripts.scripts:migrate"
migrate-create = "scripts.scripts:migrate_create"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-swagger-ui-tag>=0.7.2",
    "mkdocs-glightbox>=0.5.2",
    "mkdocstrings[python]>=1.0.0",
    "mike>=2.1.3",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    "wheel>=0.46.2",

    # via pre-commit
    "filelock>=3.20.3",
    "virtualenv>=20.36.1"
]

[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
preview = true
select = [
    "E4",
    "E7",
    "E9",
    "W291",
    "YTT",
    "T10",
    "ICN",
    "INP",
    "Q",
    "RSE",
    "SLOT",
    "INT",
    "FLY",
    "LOG",
    "C90",
    "T20",
    "D",
    "RET",
    "PD",
    "N",
    "PIE",
    "SIM",
    "S",
    "G",
    "ERA",
    "ASYNC",
    "TID",
    "UP",
    "SLF",
    "BLE",
    "C4",
    "I",
    "F",
    "A",
    "ARG",
    "PTH",
    "RUF",
    "B",
    "TCH",
    "DTZ",
    "PYI",
    "PT",
    "EM",
    "TRY",
    "PERF",
    "C901",
    "ANN",
    "CPY",
    # "FBT", # use named arguments for boolean flags
    # "TD", # todos
    # "FIX", # fixme
    # "FURB" # preview rules
]

[tool.ruff.lint.per-file-ignores]
"bookcard/db/migrations/env.py" = ["F401"]
"tests/*" = [
    "D",      # relax all docstring rules for tests
    "S101",   # assert usage in tests
    "S105",   # hard-coded password in tests
    "S106",   # hard-coded password in tests
    "ARG",    # unused args in test helpers/lambdas
    "SLF001", # private member access if needed
    "EM101",  # string literal exceptions in tests
    "TRY003", # long exception messages in raise
    "S108",   # insecure usage of directory
]
"scripts/scripts.py" = ["S603", "S404"]
"scripts/build_docs.py" = ["S404", "S603", "S607"]
"scripts/generate_openapi.py" = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = [
    "bookcard/db/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
